살 것 추가 기능 구현

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         src="https://kit.fontawesome.com/b3a8e97cc6.js"
         crossorigin="anonymous"
     ></script>
-    <!-- <script defer src="main.js"></script> -->
+    <script defer src="main.js"></script>
 </head>
 <body>
 <div class="content">
