--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script
-        src="https://kit.fontawesome.com/b3a8e97cc6.js"
-        crossorigin="anonymous"
-    ></script>
-    <script defer src="main.js"></script>
-</head>
-<body>
-<div class="content">
-    <header>
-        <h1>Shopping list</h1>
-    </header>
-    <section>
-        <p>밀가루<span><i class="fa-solid fa-xmark"></i></span></p>
-        <p>우유<span><i class="fa-solid fa-xmark"></i></span></p>
-        <p>달걀<span><i class="fa-solid fa-xmark"></i></span></p>
-    </section>
-    <footer>
-        <input type="text" id="item">
-        <div id="add"><i class="fa-solid fa-plus"></i></div>
-    </footer>
-</div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+            rel="stylesheet"
+        />
+        <script
+            src="https://kit.fontawesome.com/b3a8e97cc6.js"
+            crossorigin="anonymous"
+        ></script>
+        <script defer src="main.js"></script>
+    </head>
+    <body>
+        <div class="content">
+            <header>
+                <h1>Shopping list</h1>
+            </header>
+            <section></section>
+            <footer>
+                <input type="text" id="item" />
+                <div id="add"><i class="fa-solid fa-plus"></i></div>
+            </footer>
+        </div>
+    </body>
 </html>
