content 가운데 정렬

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <header>
                 <h1>Shopping list</h1>
             </header>
-            <section></section>
+            <section>
+                <!-- <p id="-1">temp<span class="delete"><i class="fa-solid fa-xmark"></i></span></p>` -->
+            </section>
             <footer>
                 <input type="text" id="item" />
                 <div id="add"><i class="fa-solid fa-plus"></i></div>
