addItem 함수에 createElement()와 appendChild() 도입

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- <p id="-1">temp<span class="delete"><i class="fa-solid fa-xmark"></i></span></p>` -->
             </section>
             <footer>
-                <input type="text" id="item" />
+                <input type="text" id="item-name" />
                 <div id="add"><i class="fa-solid fa-plus"></i></div>
             </footer>
         </div>
